Added sort functionality to the different titles /headers for the tbody's

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 <thead>
                     <tr>
                         <th>Cover</th>
-                        <th>Title</th>
-                        <th>Releasedate</th>
-                        <th>Tracks</th>
+                        <th id="sort-album-title">Title</th>
+                        <th id="sort-album-releasedate">Releasedate</th>
+                        <th id="sort-album-tracks">Tracks</th>
                     </tr>
                 </thead>
                 <tbody id="albums-table-tbody"></tbody>
@@ -39,12 +39,12 @@
             <table id="artists-table" class="hide">
                 <thead>
                     <tr>
-                        <th>Name</th>
-                        <th>Birthdate</th>
-                        <th>Genres</th>
-                        <th>Website</th>
+                        <th id="sort-artist-name">Name</th>
+                        <th id="sort-artist-birthdate">Birthdate</th>
+                        <th id="sort-artist-genres">Genres</th>
+                        <th id="sort-artist-website">Website</th>
                         <th>Image</th>
-                        <th>Number og Albums</th>
+                        <th id="sort-artist-numberOfAlbums">Number of Albums</th>
                     </tr>
                 </thead>
                 <tbody id="artists-table-tbody"></tbody>
@@ -54,9 +54,9 @@
             <table id="tracks-table" class="hide">
                 <thead>
                     <tr>
-                        <th>Title</th>
-                        <th>Duration</th>
-                        <th>Artists</th>
+                        <th id="sort-tracks-trackName">Title</th>
+                        <th id="sort-tracks-duration">Duration</th>
+                        <th id="sort-tracks-artistNames">Artists</th>
                         <th>Albums</th>
                     </tr>
                 </thead>
